[ADD] pagination characters
