# controllers/characterController.go
@@ -4,6 +4,7 @@ import (
 	"net/http"
 	"porty-go/models"
 	"porty-go/services"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -21,14 +22,24 @@ func NewCharacterController(service *services.CharacterService) *CharacterContro
 // @Description Get all characters from the database
 // @Tags characters
 // @Produce json
+// @Param page query int false "Page number"
+// @Param record query int false "Number of records per page"
+// @Param search query string false "Search term"
 // @Success 200 {array} models.Response
 // @Failure 400 {object} models.ErrorResponse
 // @Failure 500 {object} models.ErrorResponse
 // @Router /characters [get]
-func (cc *CharacterController) GetAllCharacters(c *gin.Context) {
-	characters, err := cc.service.GetAllCharacters()
+func (cc *CharacterController) ListAllCharacters(c *gin.Context) {
+	page, _ := strconv.Atoi(c.DefaultQuery("page", "1"))
+	record, _ := strconv.Atoi(c.DefaultQuery("record", "10"))
+	search := c.DefaultQuery("search", "")
+
+	characters, err := cc.service.ListAllCharacters(page, record, search)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{
+			Status:  "error",
+			Message: err.Error(),
+		})
 		return
 	}
 	c.JSON(http.StatusOK, models.Response{
